# RCLGeolocalization-2.0

./: CMakeLists.txt  LICENSE  README.md
include/basic_structure/: cross_point.h  cross_point_tree.h  cross_pt_tuple.h  cross_ratio.h  search_tree.h
include/cross_point_detect/: cross_line_extractor.h  cross_point_feature_creator.h  cross_points_detector.h
include/icp/: homography.h  icp.h
include/locator/: consistency_checker.h  estimator.h  locator.h  random_grid.h  sampler.h  similarity_evaluator.h
include/shp/: draw_shp_elements.h  get_shp_elements.h  shp.h
include/voronoi/: jc_voronoi.h  jc_voronoi_clip.h  voronoi_map.h  voronoi_surface.h
src/: CMakeLists.txt
src/basic_structure/: cross_point.cc  cross_point_tree.cc  cross_pt_tuple.cc  cross_ratio.cc  search_tree.cc
src/cross_point_detect/: cross_line_extractor.cc  cross_point_feature_creator.cc  cross_points_detector.cc
src/icp/: homography.cc  icp.cc
src/locator/: consistency_checker.cc  estimator.cc  locator.cc  random_grid.cc  sampler.cc  similarity_evaluator.cc
src/shp/: draw_shp_elements.cc  get_shp_elements.cc  shp.cc
src/test/: shp_to_map.cc  shp_to_voronoi.cc  single_img_localization.cc
src/voronoi/: jc_voronoi.cc  voronoi_map.cc  voronoi_surface.cc
tool/: gongzi.py  match_quality_analysis.py  result-analysis.py
